recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:5: error: not found: value steps
  if (steps==0){
      ^